# sufast

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Command.md  EXAMPLE_APP_GUIDE.md  LICENSE  MANIFEST.in  Makefile.ps1  PROJECT_SUMMARY.md  README.md  ULTRA_FIX_SUMMARY.md  blog.db  example_app_ultimate.py  setup.py  test_core_functionality.py  test_dynamic_routing.py  test_hybrid.py  test_simple_hybrid.py  test_ultra_fix.py  ultra_demo.py
.github/workflows/: ci.yml
docs/: architecture.md  quickstart.md
python/: LOCAL_TESTING.md  MANIFEST.in  example_app.py  example_app_ultimate.py  pyproject.toml
python/example/: complete_example.py  enhanced_example.py  example_app_ultimate.py
python/sufast/: __init__.py  __main__.py  app.py  background.py  cli.py  compression.py  core.py  core_backup.py  core_ultimate.py  database.py  exceptions.py  logging.py  middleware.py  openapi.py  request.py  routing.py  security.py  server.py  sessions.py  socketio_support.py  sse.py  swagger.py  templates.py  testclient.py  uploads.py  websocket.py
python/sufast/docui/: redoc.css  redoc.html  redoc.js  swagger.css  swagger.html  swagger.js
python/tests/: conftest.py  demo_run.py  test_compat_exports.py  test_core.py  test_example.py  test_framework.py  test_integration.py  test_v2_features.py
rust-core/: Cargo-new.toml  Cargo.toml  README.md
rust-core/benches/: http_performance.rs
rust-core/src/: database.rs  handlers.rs  lib.rs  lib_ultimate.rs  middleware.rs  rate_limiting.rs  request.rs  response.rs  routes.rs  routing.rs  security.rs  server.rs  templates.rs
scripts/: build.py  lint.py  test.py
server_rust/: Cargo.toml
server_rust/src/: handlers.rs  lib.rs  server.rs
sufast/: core.py
sufast.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_core.py
