[package]
name = "sufast-core"
version = "1.0.0"
edition = "2021"
authors = ["Shohan <shohan.dev.cse@gmail.com>"]
description = "High-performance HTTP server core for the Sufast Python web framework"
license = "MIT"
repository = "https://github.com/shohan-dev/sufast"
homepage = "https://github.com/shohan-dev/sufast"
keywords = ["http", "web", "server", "performance", "ffi"]
categories = ["web-programming::http-server", "api-bindings"]
readme = "README.md"

[lib]
name = "sufast_server"
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
axum-test = "14.0"

[[bench]]
name = "http_performance"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

[profile.dev]
opt-level = 1
