[package]
name = "sufast-core"
version = "2.0.0"
edition = "2021"
authors = ["Shohan <shohan.dev.cse@gmail.com>"]
description = "High-performance hybrid HTTP server core for the Sufast Python web framework"
license = "MIT"
repository = "https://github.com/shohan-dev/sufast"
homepage = "https://github.com/shohan-dev/sufast"
keywords = ["http", "web", "server", "performance", "ffi"]
categories = ["web-programming::http-server", "api-bindings"]
readme = "README.md"

[lib]
name = "sufast_server"
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
regex = "1.0"
mime_guess = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dashmap = "5.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
thiserror = "1.0"
libc = "0.2"
base64 = "0.21"
hex = "0.4"
sha2 = "0.10"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "chrono", "uuid"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
urlencoding = "2.1"
once_cell = "1.19"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tokio-test = "0.4"
tempfile = "3.0"

[[bench]]
name = "http_performance"
harness = false

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
