[package]
name = "rust_server"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]



[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.17"
tracing = "0.1"
tracing-subscriber = "0.3"
